daytrader-accountsapp/daytrader-accounts/env/external/k8s/daytrader-accounts-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: daytrader-accounts
  name: daytrader-accounts
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daytrader-accounts
  template:
    metadata:
      labels:
        app: daytrader-accounts
    spec:
      containers:
      - image: dhvines/daytrader-accounts:4.0.15
        imagePullPolicy: IfNotPresent
        name: daytrader-accounts
        ports:
        - containerPort: 1443
          protocol: TCP
