daytrader-accountsapp/daytrader-accounts/env/external/k8s/daytrader-accounts-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: daytrader-accounts
  name: daytrader-accounts
  namespace: default
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 1443
  selector:
    app: daytrader-accounts
  sessionAffinity: None
  type: NodePort
